Improve netns/move example

--- a/netns/move/ovpn_example.conf
+++ b/netns/move/ovpn_example.conf
@@ -19,9 +19,9 @@ crl-verify crl.rsa.4096.pem
 ca ca.rsa.4096.crt
 disable-occ
 
-###################
-## MODIFICATIONS ##
-###################
+####################
+## CUSTOMIZATIONS ##
+####################
 
 # Configure interface later:
 ifconfig-noexec
